<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.viswanth.whatsappstatusdownload.activity.HomeActivity"
    tools:showIn="@layout/h_app_bar_home">


    <Button
        android:id="@+id/buttonSavedStories"
        style="@style/mybutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onSavedStories"
        android:text="@string/title_activity_saved_stories"
        app:layout_constraintBottom_toTopOf="@+id/guideButton"
        app:layout_constraintEnd_toEndOf="@+id/guideButton"
        app:layout_constraintStart_toStartOf="@+id/guideButton"
        app:layout_constraintTop_toBottomOf="@+id/homeRecentStories" />


    <Button
        android:id="@+id/homeRecentStories"
        style="@style/mybutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onRecentStories"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/title_activity_recent_stories"
        app:layout_constraintBottom_toTopOf="@+id/buttonSavedStories"
        app:layout_constraintEnd_toEndOf="@+id/buttonSavedStories"
        app:layout_constraintStart_toStartOf="@+id/buttonSavedStories"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/guideButton"
        style="@style/mybutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onHowItWorks"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSavedStories" />


</android.support.constraint.ConstraintLayout>
