<?xml version="1.0" encoding="utf-8"?>



    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardBackgroundColor="@color/colorCardview">



<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/vvr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/saveORdelete"
        app:layout_constraintEnd_toEndOf="@+id/sharefilebutton"
        app:layout_constraintStart_toStartOf="@+id/saveORdelete"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/googleg_standard_color_18" />

            <Button
                android:shadowColor="@color/colorPrimaryDark"
                style="@style/mybutton"
                android:id="@+id/saveORdelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBaseline_toBaselineOf="@+id/sharefilebutton"
                app:layout_constraintEnd_toStartOf="@+id/sharefilebutton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                style="@style/mybutton"
                android:id="@+id/sharefilebutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveORdelete" />


    </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

